force-app/main/default/objects/Loan_Advance__c/Loan_Advance__c.object-meta.xml
<CustomObject>
    <label>Loan / Advance</label>
    <nameField>
        <displayFormat>LA{0000}</displayFormat>
        <label>Loan / Advance</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loans / Advances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>