force-app/main/default/objects/Loan_Advance__c/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approved By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Loans / Advances (Approved By)</relationshipLabel>
    <relationshipName>Loans_Advances2</relationshipName>
    <type>Lookup</type>
</CustomField>