force-app/main/default/objects/Loan_Advance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Contact__c</columns>
    <columns>Amount__c</columns>
    <columns>Balance__c</columns>
    <columns>Total_Amount_Paid__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>